規約の視認性向上

--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
         .legal-content h3 { font-size: 1.1em; font-weight: bold; margin-top: 1.2em; margin-bottom: 0.5em; color: #e2e8f0; }
         .legal-content p { margin-bottom: 1em; line-height: 1.6; color: #e2e8f0; }
         .legal-content ul, .legal-content ol { margin-bottom: 1em; padding-left: 1.5em; color: #e2e8f0; }
+        .legal-content h3 { font-size: 1.1em; font-weight: bold; margin-top: 1.2em; margin-bottom: 0.5em; color: #f8fafc; }
+        .legal-content p { margin-bottom: 1em; line-height: 1.6; color: #f8fafc; }
+        .legal-content ul, .legal-content ol { margin-bottom: 1em; padding-left: 1.5em; color: #f8fafc; }
         .legal-content li { margin-bottom: 0.5em; list-style-type: disc; }
         .legal-content ol li { list-style-type: decimal; }
     </style>
@@ -628,6 +631,7 @@
             </div>
             <div class="flex-1 overflow-y-auto p-8 app-scrollbar bg-slate-900">
                 <div id="legal-content" class="legal-content text-slate-200">
+                <div id="legal-content" class="legal-content text-slate-50">
                     <!-- Content injected via JS -->
                     <div class="flex flex-col items-center justify-center h-full text-slate-500">
                         <div class="w-8 h-8 border-2 border-slate-600 border-t-gold-500 rounded-full animate-spin mb-4"></div>
