--- a/index.html
+++ b/index.html
@@ -122,14 +122,11 @@
         }
 
         /* Legal Content Styles (for injected HTML) */
-        .legal-content h1 { font-size: 1.5em; font-weight: bold; margin-bottom: 1em; color: #fff; }
-        .legal-content h2 { font-size: 1.25em; font-weight: bold; margin-top: 1.5em; margin-bottom: 0.75em; color: #d4af37; border-bottom: 1px solid #334155; padding-bottom: 0.25em; }
-        .legal-content h3 { font-size: 1.1em; font-weight: bold; margin-top: 1.2em; margin-bottom: 0.5em; color: #e2e8f0; }
-        .legal-content p { margin-bottom: 1em; line-height: 1.6; color: #e2e8f0; }
-        .legal-content ul, .legal-content ol { margin-bottom: 1em; padding-left: 1.5em; color: #e2e8f0; }
-        .legal-content h3 { font-size: 1.1em; font-weight: bold; margin-top: 1.2em; margin-bottom: 0.5em; color: #f8fafc; }
-        .legal-content p { margin-bottom: 1em; line-height: 1.6; color: #f8fafc; }
-        .legal-content ul, .legal-content ol { margin-bottom: 1em; padding-left: 1.5em; color: #f8fafc; }
+        .legal-content h1 { font-size: 1.5em; font-weight: bold; margin-bottom: 1em; color: #1e293b; }
+        .legal-content h2 { font-size: 1.25em; font-weight: bold; margin-top: 1.5em; margin-bottom: 0.75em; color: #d4af37; border-bottom: 1px solid #e2e8f0; padding-bottom: 0.25em; }
+        .legal-content h3 { font-size: 1.1em; font-weight: bold; margin-top: 1.2em; margin-bottom: 0.5em; color: #334155; }
+        .legal-content p { margin-bottom: 1em; line-height: 1.6; color: #334155; }
+        .legal-content ul, .legal-content ol { margin-bottom: 1em; padding-left: 1.5em; color: #334155; }
         .legal-content li { margin-bottom: 0.5em; list-style-type: disc; }
         .legal-content ol li { list-style-type: decimal; }
     </style>
@@ -629,9 +626,8 @@
                     </button>
                 </div>
             </div>
-            <div class="flex-1 overflow-y-auto p-8 app-scrollbar bg-slate-900">
-                <div id="legal-content" class="legal-content text-slate-200">
-                <div id="legal-content" class="legal-content text-slate-50">
+            <div class="flex-1 overflow-y-auto p-8 app-scrollbar bg-white">
+                <div id="legal-content" class="legal-content text-slate-800">
                     <!-- Content injected via JS -->
                     <div class="flex flex-col items-center justify-center h-full text-slate-500">
                         <div class="w-8 h-8 border-2 border-slate-600 border-t-gold-500 rounded-full animate-spin mb-4"></div>
