--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja" class="scroll-smooth">
 <head>
+    <meta name="google-site-verification" content="M6sgbPAmj45KnsC4IitdcbwdEsYlgxsIkKGp5xqUb0M" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>シフトSOS | 管理者のためのシフト管理自動化ソリューション</title>
