検索結果の改善

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 
     <style>
         <meta name="google-site-verification" content="M6sgbPAmj45KnsC4IitdcbwdEsYlgxsIkKGp5xqUb0M" />
+        <title>ShiftSOS - バイトの代わりがすぐ見つかるシフト管理アプリ</title>
+
+<meta name="description" content="急な欠勤でも安心。ShiftSOS（シフトエスオーエス）なら、LINEを使って数分で代わりのスタッフが見つかります。完全無料で今すぐ利用開始。">
         body {
             background-color: #0f172a;
             color: #f8fafc;
