--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>シフトSOS | 管理者のためのシフト管理自動化ソリューション</title>
-    <meta name="description" content="急なシフト交代をLINEで自動化。管理者のタイムパフォーマンスを最大化し、組織に精神的な余裕をもたらす「シフトSOS」。">
+    <title>ShiftSOS（シフトSOS）- バイトの代わりがすぐ見つかるアプリ</title>
+    <meta name="description" content="ShiftSOS（シフトSOS）は、バイトの代わりをLINEですぐに探せる無料アプリです。急な欠勤やシフト管理の悩みを解決します。">
+    <meta name="google-site-verification" content="M6sgbPAmj45KnsC4IitdcbwdEsYlgxsIkKGp5xqUb0M" />
     
     <!-- Canonical URL & OGP -->
     <link rel="canonical" href="https://shiftsos2.web.app/">
@@ -56,10 +57,6 @@
     </script>
 
     <style>
-        <meta name="google-site-verification" content="M6sgbPAmj45KnsC4IitdcbwdEsYlgxsIkKGp5xqUb0M" />
-        <title>ShiftSOS - バイトの代わりがすぐ見つかるシフト管理アプリ</title>
-
-<meta name="description" content="急な欠勤でも安心。ShiftSOS（シフトエスオーエス）なら、LINEを使って数分で代わりのスタッフが見つかります。完全無料で今すぐ利用開始。">
         body {
             background-color: #0f172a;
             color: #f8fafc;
@@ -141,6 +138,10 @@
     </style>
 </head>
 <body class="antialiased">
+    <noscript>
+        <h1>ShiftSOS（シフトSOS）</h1>
+        <p>ShiftSOSはバイトの代わりが見つかる革新的なシフト管理アプリです。</p>
+    </noscript>
 
     <!-- Header / Navigation -->
     <header class="fixed w-full z-50 transition-all duration-300 bg-slate-900/80 backdrop-blur-md border-b border-white/10" id="header">
